--- a/app1/styles.css
+++ b/app1/styles.css
@@ -1,40 +1,78 @@
 /* ================================ */
-/* 1. Selectors & Basic Properties - Hero Section */
+/*! 1. Selectors & Basic Properties - Hero Section */
 /* ================================ */
+/* Main 4 Type of CSS */
 
 /* Universal Selector */
-*{
+* {
     padding: 0;
     margin: 0;
 }
 
 /* Element Selector */
 body {
-   background: #f7f7f7;  /* generally for most website */
-   color: #333; /* generally for most website */
+    background: #f7f7f7;
+    /* generally for most website */
+    color: #333;
+    /* generally for most website */
+    font-family: "Poppins", Times, serif;
+    /* Times and serif >> Backup Fonts */
 }
 
-/* Class Selector -> 90% of CSS*/
-.hero{
+/* Class Selector */
+/* 90% of CSS */
+.hero {
     padding: 100px;
 }
 
-.hero__title{
+.hero__title {
     color: black;
 }
 
-.hero__description{
-    color: #81da76;
+.hero__description {
+    color: #5dcd4e;
 }
 
-/* ID Selector -> Target 1 element in App*/
-#hero__highlight{
-    color: #dbfbe0;
+/* ID Selector */
+/* Target 1 element in App */
+#hero__highlight {
+    color: #304f34;
 }
-    
+
 /* ================================ */
-/* 2. Fonts - Features Section */
+/*! 2. Fonts - Features Section */
 /* ================================ */
+
+.feature {
+    color: rgb(59, 16, 100);
+    font-family: Times, serif;
+    padding: 100px;
+}
+
+.feature__item {
+    padding: 30px 0;
+    /* Y and X */
+
+}
+
+.feature__title {
+    font-size: 2.8rem;
+    /* rem - relative to fonts size to root >> better than px for font-size*/
+    font-weight: 500;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    /* text-decoration: underline; */
+}
+
+.feature__description {
+    font-size: 18px;
+    text-align: left;
+    letter-spacing: 0.15rem;
+    line-height: 2.4rem;
+    word-spacing: 3rem;
+    /* white-space: nowrap;
+    white-space: pre-wrap; */
+}
 
 /* ================================ */
 /* 3. Colors - Call to Action Section */
