--- a/app1/styles.css
+++ b/app1/styles.css
@@ -106,6 +106,42 @@ button {
 /* 4. Box Model - Video Section */
 /* ================================ */
 
+.video {
+    text-align: center;
+    padding: 100px;
+    font-weight: 500;
+}
+
+.video__description {
+    margin-top: 10px;
+    padding: 10px;
+    font-weight: 300;
+    color: #6e6e6e;
+}
+
+.video__controls {
+    margin-top: 20px;
+}
+
+.video__button {
+    border: 1px solid #5bb471;
+    /* border: 2px dotted #5bb471; */
+    background: none;
+    padding: 10px 20px;
+    border-radius: 10px;
+}
+
+.video__button--primaary {
+    margin-right: 10px;
+}
+
+.video__container {
+    margin-top: 20px;
+    background-color: #ccc;
+    width: 100%;
+    height: 400px;
+}
+
 /* ================================ */
 /* 5. Flex - Programs Section */
 /* ================================ */
