--- a/app1/styles.css
+++ b/app1/styles.css
@@ -140,7 +140,10 @@ button {
     background-color: #ccc;
     width: 100%;
     height: 400px;
+    box-shadow: 18px 8px 20px -10px rgba(0, 0, 0, 0.3);
 }
+
+/* There is a CSS generator tool that can help css */
 
 /* ================================ */
 /* 5. Flex - Programs Section */
