--- a/app1/styles.css
+++ b/app1/styles.css
@@ -150,23 +150,29 @@ button {
 /* ================================ */
 
 .programs {
-    padding: 100px;
+    padding: 80px;
     background-color: #eee;
-    padding-bottom: 200px;
+    padding-bottom: 150px;
 }
 
 .programs__cards {
     display: flex;
+    /*Main Use */
+    /* justify-content: center; */     
     justify-content: space-between;
+    /* justify-content: space-around; */
+    align-items: center;
     gap:  20px;
     margin-top: 20px;
 }
 
 .programs__card {
-    background-color: #b5b5b5;
+    background-color: #b84545;
     padding: 30px;
-    width: 30%;
-    height: 350px;
+    width: 10%;
+    /* flex-grow: 1; */
+    flex-basis: 10%;
+    height: 300px;
 }
 /* ================================ */
 /* 6. HTML Elements & Images - Form Section */
